--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ performer-pytorch
 Pillow
 pymongo
 opencv-python
-streamlit
+streamlit==0.65.0
 dnspython
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.7.1+cpu
